samples/_failures_safe/1761092910_ce3f4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fac8fd69.c: In function ‘tokenize’:
./samples/SAFE/__tmp_fac8fd69.c:160:12: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  160 |     return token
      |            ^~~~~
      |            Token
./samples/SAFE/__tmp_fac8fd69.c:160:12: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fac8fd69.c:160:17: error: expected ‘;’ at end of input
  160 |     return token
      |                 ^
      |                 ;
./samples/SAFE/__tmp_fac8fd69.c:160:5: error: expected declaration or statement at end of input
  160 |     return token
      |     ^~~~~~
